Fix header text align

--- a/src/components/header.css
+++ b/src/components/header.css
@@ -5,6 +5,7 @@
 
 .header h1 {
   margin: 15px 0 5px 0;
+  text-align: center;
 }
 
 .header__text {
